# agno-conselho

./: .gitignore  agent.py  agent_manager.py  agents.json  main.py  pyproject.toml  render.yaml  requirements.txt  test_anxiety.py  test_api.py  test_tavily.py  verify_memory.py  verify_persistence.py  whatsapp_bridge.py
prompt/: agostinho.xml  billy.xml  martinho.xml  paulo.xml  spurgeon.xml
static/: index.html  script.js  style.css
